--- a/libs/storybook/src/api/docs/canvas.stories.mdx
+++ b/libs/storybook/src/api/docs/canvas.stories.mdx
@@ -1,6 +1,6 @@
-import { Meta } from '@storybook/addon-docs';
+import {Meta} from '@storybook/addon-docs';
 
-<Meta title={'Core API/Canvas'} parameters={{ viewMode: 'docs' }} />
+<Meta title={'Core API/Canvas'} parameters={{viewMode: 'docs'}}/>
 
 # Canvas
 
@@ -41,16 +41,16 @@ export class AppModule {}
 `ngt-canvas` is the main building block of NGT. Normally when working with THREE.js, we need to set up a `WebGLRenderer`, a `Scene`, and a `Camera`. `ngt-canvas` sets these up with the following defaults:
 
 -   `WebGLRenderer`:
-    -   `antialias`: `true`
-    -   `alpha`: `true`
-    -   `powerPreference`: `"high-performance"`
-    -   `setClearAlpha(0)`
-    -   if `shadows` is passed in, `shadowMap` will be enabled, and a default `PCFSoftShadowMap` will be assigned.
-    -   if `linear` is `false` (which is the default), the colorpsace on the `WebGLRenderer` will be set to `sRGB` and all colors/textures will be converted to `sRGB` when they are loaded.
-        > Consult https://www.donmccurdy.com/2020/06/17/color-management-in-threejs for more information about color management.
+-   `antialias`: `true`
+-   `alpha`: `true`
+-   `powerPreference`: `"high-performance"`
+-   `setClearAlpha(0)`
+-   if `shadows` is passed in, `shadowMap` will be enabled, and a default `PCFSoftShadowMap` will be assigned.
+-   if `linear` is `false` (which is the default), the colorpsace on the `WebGLRenderer` will be set to `sRGB` and all colors/textures will be converted to `sRGB` when they are loaded.
+> Consult https://www.donmccurdy.com/2020/06/17/color-management-in-threejs for more information about color management.
 -   A default `PerspectiveCamera` with `fov: 75, near: 0.1, far: 1000, z: 5`
-    -   if `orthographic` is set to `true`, the camera will be set to `OrthographicCamera` with `near: 0.1, far: 1000, z: 5`
-    -   By default, `Camera` will look at the `[0, 0, 0]` (center of the scene)
+-   if `orthographic` is set to `true`, the camera will be set to `OrthographicCamera` with `near: 0.1, far: 1000, z: 5`
+-   By default, `Camera` will look at the `[0, 0, 0]` (center of the scene)
 -   A default `Scene` and `Raycaster`
 -   A `window:resize` listener that will update the `Renderer#size` and `Camera#aspect` when the window is resized.
 
@@ -62,10 +62,12 @@ You can override some default `NGT_CANVAS_OPTIONS` to customize how `CanvasCompo
 
 ```ts
 export interface NgtCanvasOptions {
+    initialLog?: boolean;
     projectContent?: boolean;
 }
 
 const DEFAULT_NGT_CANVAS_OPTIONS: NgtCanvasOptions = {
+    initialLog: false,
     projectContent: false,
 };
 ```
@@ -76,7 +78,21 @@ const DEFAULT_NGT_CANVAS_OPTIONS: NgtCanvasOptions = {
 @Component({
   /**/,
   providers: [
-    { provide: NGT_CANVAS_OPTIONS, useValue: provideCanvasOptions({/* options goes here */}) }
+    provideCanvasOptions({/* options goes here */})
+  ]
+})
+export class AppComponent {}
+```
+
+### `initialLog`
+
+This flag, if turned on, will log the whole `NgtCanvasStore` upon Canvas creation. Default to `false`, aka no log.
+
+```ts
+@Component({
+  /**/,
+  providers: [
+    provideCanvasOptions({initialLog: true})
   ]
 })
 export class AppComponent {}
@@ -90,7 +106,7 @@ By default, `CanvasComponent` will not project any of its children. This is to n
 @Component({
   /**/,
   providers: [
-    { provide: NGT_CANVAS_OPTIONS, useValue: provideCanvasOptions({projectContent: !environment.production}) }
+    provideCanvasOptions({projectContent: !environment.production})
   ]
 })
 export class AppComponent {}
