--- a/libs/storybook/src/api/docs/directives.stories.mdx
+++ b/libs/storybook/src/api/docs/directives.stories.mdx
@@ -1,6 +1,6 @@
-import { Meta } from '@storybook/addon-docs';
+import {Meta} from '@storybook/addon-docs';
 
-<Meta title={'Core API/Directives'} parameters={{ viewMode: 'docs' }} />
+<Meta title={'Core API/Directives'} parameters={{viewMode: 'docs'}}/>
 
 # Directives
 
@@ -10,14 +10,14 @@ This directive acts like an `ngFor` but the template will iterate over "how many
 
 ```html
 <!--creating 1000 SobaDetailed-->
-<ngt-soba-detailed #lod *repeat="let _ of 1000"></ngt-soba-detailed>
+<ngt-soba-detailed #lod *ngFor="let i repeat 1000"></ngt-soba-detailed>
 ```
 
 ## `NgtCursor`
 
 This directive will change the `cursor` style on the `document.body` to `pointer` on objects' hover, and back to `auto` on objects' off-hover. This is useful when you want to show a pointer `cursor` to let the users know that some 3D object is actionable.
 
-> `ngtCusor` can only be used `NgtObject3dInputsController`.
+> `ngtCusor` can only be used `NgtObjectInputsController`.
 
 ```html
 <!--hovering this mesh will change the cursor-->
