--- a/libs/storybook/src/api/docs/objects.stories.mdx
+++ b/libs/storybook/src/api/docs/objects.stories.mdx
@@ -1,6 +1,6 @@
-import { Meta } from '@storybook/addon-docs';
+import {Meta} from '@storybook/addon-docs';
 
-<Meta title={'Core API/Objects'} parameters={{ viewMode: 'docs' }} />
+<Meta title={'Core API/Objects'} parameters={{viewMode: 'docs'}}/>
 
 # Objects
 
@@ -63,7 +63,7 @@ This pseudo-template is pretty much the equivalent of the THREE.js counterpart. 
 
 ```ts
 export class NgtPseudoObject3D {
-    constructor(@Optional() private parentObject3d: NgtPseudoObject3D) {}
+    constructor(@Optional() @SkipSelf() private parentObject3d: NgtPseudoObject3D) {}
 }
 ```
 
@@ -132,9 +132,9 @@ More often than not, we want load 3D models from an external source and put them
   `,
 })
 export class SomeComponent {
-    model$ = this.loaderService.use(GLTFLoader, 'path/to/model.gltf');
+    model$ = this.loader.use(GLTFLoader, 'path/to/model.gltf');
 
-    constructor(private loaderService: NgtLoaderService) {}
+    constructor(private loader: NgtLoader) {}
 }
 
 @NgModule({
