--- a/libs/storybook/src/api/docs/services.stories.mdx
+++ b/libs/storybook/src/api/docs/services.stories.mdx
@@ -1,6 +1,6 @@
-import { Meta } from '@storybook/addon-docs';
+import {Meta} from '@storybook/addon-docs';
 
-<Meta title={'Core API/Services'} parameters={{ viewMode: 'docs' }} />
+<Meta title={'Core API/Services'} parameters={{viewMode: 'docs'}}/>
 
 # Services
 
@@ -8,28 +8,28 @@ In addition to the Component Stores, there are also a number of services that ar
 
 | Service             | Scope            |
 | ------------------- | ---------------- |
-| NgtDestroyedService | Any Component    |
-| NgtLoopService      | CanvasComponent  |
+| NgtDestroyed | Any Component    |
+| NgtLoop      | CanvasComponent  |
 | NgtResize           | Any Component    |
-| NgtLoaderService    | Root (Singleton) |
+| NgtLoader    | Root (Singleton) |
 
-## `NgtDestroyedService`
+## `NgtDestroyed`
 
 This service is a utility service that can be used in combination with `takeUntil` so the consumers don't need to create their own `destroyed` subject.
 
 ```ts
 @Component({
     /* ... */
-    providers: [NgtDestroyedService],
+    providers: [NgtDestroyed],
 })
 export class SomeComponent {
-    constructor(private destroyed: NgtDestroyedService) {
+    constructor(private destroyed: NgtDestroyed) {
         interval(1000).pipe(takeUntil(destroyed)).subscribe();
     }
 }
 ```
 
-## `NgtLoopService`
+## `NgtLoop`
 
 This service handles the starting and stopping of the animation loop. This is **internal** to NGT but exposed to use in other parts of the library.
 
@@ -107,16 +107,16 @@ export class SomeComponent {
 }
 ```
 
-## `NgtLoaderService`
+## `NgtLoader`
 
 This service is used to load external resources. This is recommended as it is type-safe as well as it has an internal caching mechanism to make sure not to load the same resource multiple times.
 
-`NgtLoaderService` is a singleton and can be injected into any component regardless of `ngt-canvas` or not.
+`NgtLoader` is a singleton and can be injected into any component regardless of `ngt-canvas` or not.
 
 ```ts
 export class SomeComponent {
-    model$ = this.loaderService.use(GTLFLoader, 'path/to/model.gltf'); // Observable<GLTF>
+    model$ = this.loader.use(GTLFLoader, 'path/to/model.gltf'); // Observable<GLTF>
 
-    constructor(private loaderService: NgtLoaderService) {}
+    constructor(private loader: NgtLoader) {}
 }
 ```
