--- a/libs/storybook/src/api/docs/stores.stories.mdx
+++ b/libs/storybook/src/api/docs/stores.stories.mdx
@@ -1,14 +1,12 @@
-import { Meta } from '@storybook/addon-docs';
+import {Meta} from '@storybook/addon-docs';
 
-<Meta title={'Core API/Stores'} parameters={{ viewMode: 'docs' }} />
+<Meta title={'Core API/Stores'} parameters={{viewMode: 'docs'}}/>
 
 # Stores
 
-NGT makes use of [@rx-angular/state](https://github.com/rx-angular/rx-angular) to provide a way to manage the state of everything happening in the Canvas. These stores are provided by the `ngt-canvas` component and are available to all children of `ngt-canvas` via [Hierarchical Dependency Injection](https://angular.io/guide/hierarchical-dependency-injection)
+NGT makes use of an internal Store called `NgtStore`. This is the combination of [@rx-angular/state](https://github.com/rx-angular/rx-angular) and [@ngrx/component-store](https://ngrx.io).
 
-Even though we want to avoid Imperative State Management, it is almost unavoidable such problem when working with an imperative library like THREE.js. Hence, all the stores in NGT expose `get()` method that can retrieve the state at the time of invoking. This is especially helpful when registering animation callbacks. Since animation callbacks are invoked on every frame, `get()` will almost always guarantee to return the latest and freshest state.
-
-## `NgtStore`
+## `NgtCanvasStore`
 
 This store is the main store for the Canvas. It is responsible for keeping the Renderer, Scene, Camera, and other states/configurations for the 3 main building blocks. It also contains information about the Viewport like Size and Device Pixel Ratio (DPR).
 
@@ -64,7 +62,3 @@ export class TwoMeshesComponent {
 ## `NgtEventsStore`
 
 This store handles the Events inside the Canvas with `Raycaster` and `Intersection` objects. This store is internal, but it is exposed to the consumers. We should never have a need to use this store directly.
-
-## `NgtPerformanceStore`
-
-TBD. Examples needed before explaining.
